# minfraud-api-python

./: .gitignore  .readthedocs.yaml  .travis-black.sh  .travis-pylint.sh  .travis-yapf.sh  .travis.yml  CLAUDE.md  HISTORY.rst  MANIFEST.in  README.dev.rst  README.rst  lychee.toml  mise.toml  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  lint.yml  release.yml  test.yml
dev-bin/: release.sh
docs/: conf.py  index.rst
minfraud/: __init__.py  errors.py  models.py  request.py  scratch  validation.py  version.py  webservice.py
src/minfraud/: __init__.py  errors.py  models.py  request.py  validation.py  version.py  webservice.py
tests/: models_test.py  test_models.py  test_request.py  test_validation.py  test_webservice.py  validation_test.py
tests/data/: factors-response.json  full-report-request.json  full-request.json  full-transaction-request.json  insights-response.json  score-response.json
