[project]
name = "minfraud"
version = "3.0.0"
description = "MaxMind minFraud API"
authors = [
    {name = "Gregory Oschwald", email = "goschwald@maxmind.com"},
]
dependencies = [
    "aiohttp>=3.6.2,<4.0.0",
    "email_validator>=2.0.0,<3.0.0",
    "geoip2>=5.1.0,<6.0.0",
    "requests>=2.24.0,<3.0.0",
    "typing-extensions>=4.13.2",
    "voluptuous",
]
requires-python = ">=3.9"
readme = "README.rst"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Internet :: WWW/HTTP",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-httpserver>=1.0.10",
]
lint = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "mypy>=1.15.0",
    "pylint>=3.3.6",
    "ruff>=0.11.6",
    "types-requests>=2.32.0.20250328",
]

[project.urls]
Homepage = "https://www.maxmind.com/"
Documentation = "https://minfraud.readthedocs.org/"
"Source Code" = "https://github.com/maxmind/minfraud-api-python"
"Issue Tracker" = "https://github.com/maxmind/minfraud-api-python/issues"

[build-system]
requires = [
    "setuptools>=77.0.3",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.black]
# src is showing up in our GitHub linting builds. It seems to
# contain deps.
extend-exclude = '^/src/'

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Skip type annotation on **_
    "ANN003",

    # documenting magic methods
    "D105",

    # Line length. We let black handle this for now.
    "E501",

    # Don't bother with future imports for type annotations
    "FA100",

    # Magic numbers for HTTP status codes seem ok most of the time.
    "PLR2004",

    # pytest rules
    "PT009",
    "PT027",
]

[tool.ruff.lint.flake8-builtins]
ignorelist = ["id"]

[tool.ruff.lint.per-file-ignores]
"minfraud/models,.py" = [ "D107", "PLR0913" ]
"tests/*" = ["ANN201", "D"]

[tool.setuptools.package-data]
minfraud = ["py.typed"]

[tool.tox]
env_list = [
    "3.9",
    "3.10",
    "3.11",
    "3.12",
    "3.13",
    "lint",
]
skip_missing_interpreters = false

[tool.tox.env_run_base]
dependency_groups = [
  "dev",
]
commands = [
    ["pytest", "tests"],
]

[tool.tox.env.lint]
description = "Code linting"
python = "3.13"
dependency_groups = [
    "dev",
    "lint",
]
commands = [
    ["black", "--check", "--diff", "."],
    ["flake8", "minfraud"],
    ["mypy", "minfraud", "tests"],
    ["pylint", "minfraud"],
]

[tool.tox.gh.python]
"3.13" = ["3.13", "lint"]
"3.12" = ["3.12"]
"3.11" = ["3.11"]
"3.10" = ["3.10"]
"3.9" = ["3.9"]
