[metadata]
name = minfraud
author = Gregory Oschwald
author_email = goschwald@maxmind.com
license = Apache License 2.0
description = MaxMind minFraud Score, Insights, Factors and Report Transactions API
url = https://www.maxmind.com/
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python
    Topic :: Internet :: Proxy Servers
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet
platforms = any
project_urls =
    Documentation = https://minfraud.readthedocs.org/
    Source Code = https://github.com/maxmind/minfraud-api-python
    Issue Tracker = https://github.com/maxmind/minfraud-api-python/issues

[flake8]
# black uses 88 : ¯\_(ツ)_/¯
max-line-length = 88

[options]
packages = minfraud
install_requires =
    aiohttp>=3.6.2,<4.0.0
    email_validator>=1.1.1,<3.0.0
    geoip2>=4.7.0,<5.0.0
    requests>=2.24.0,<3.0.0
    voluptuous
include_package_data = True
python_requires = >=3.7
test_suite = tests
tests_require = mocket>=3.11.1

[wheel]
universal = 1

[options.package_data]
minfraud = py.typed

[tox:tox]
envlist = {py37,py38,py39,py310}-test,py310-{black,lint,flake8,mypy}

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310,black,lint,flake8,mypy

[testenv:{py37,py38,py39,py310}-test]
deps =
    mocket
    pytest

    # explicitly require indirect dependency to fix build failure.
    # This can be removed when aiohttp 3.9 is released.
    charset-normalizer==2.1.1
commands = pytest tests

[testenv:py310-black]
deps = black
commands = black --check --diff .

[testenv:py310-lint]
deps = pylint
commands = pylint minfraud

[testenv:py310-flake8]
deps = flake8
commands = flake8 minfraud

[testenv:py310-mypy]
deps =
    mypy
    types-requests
    voluptuous-stubs
commands = mypy minfraud tests
